--- a/competitors-smartsheet.html
+++ b/competitors-smartsheet.html
@@ -271,7 +271,7 @@
                 <figure>
                   <img src="images/smartsheet2.png" alt="Smartsheet Logo">
                 </figure>
-                <p>Trello is a task management app that lets you organize ideas and tasks into boards, but lacks essential project management tools and features. </p>
+                <p>smartsheet is a task management app that lets you organize ideas and tasks into boards, but lacks essential project management tools and features. </p>
               </div>
           </div>
 
