--- a/es/budget-tracker.html
+++ b/es/budget-tracker.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Monitoriza tu gasto con Workep</title>
+      <meta name="description" content="Tome las riendas de sus finanzas con el planificador de presupuestos en línea de Workep. mida sus gastos y obtenga un futuro rentable.">
     <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
     <!-- Bootstrap CSS -->
@@ -41,8 +42,8 @@
 <div class="budget_tracker_banner">
     <div class="container time_tracker_content">
       <div class="time_tracker_contentbox">
-        <h1>Anliza tu gasto en cualquier momento </h1>
-        <h3>Sume el presupuesto que se gasta en cada tarea y proyecto...<u>¡incluso desde su teléfono!</u></h3>
+        <h1>Analiza tu gasto en cualquier momento </h1>
+        <h3>Sume el presupuesto que se gasta en cada tarea y proyecto...<u>¡incluso desde su móvil!</u></h3>
       </div>
     </div>
     <div class="container time_tracker_img">
@@ -65,7 +66,7 @@
             <br>
             <br>
         </div>
-        <p>Lleve un registro de todos los gastos con el rastreador de presupuesto en la aplicación de Workep. Incluso puede adjuntar facturas para facilitar a los clientes de facturación las tareas que complete.</p>
+        <p>Lleve un registro de todos los gastos con el rastreador de presupuesto en Workep. Incluso puede adjuntar facturas para facilitar a los clientes de facturación las tareas que complete.</p>
         <div class="time_tracking_step">
           <div class="row">
             <div class="col-md-4">
