--- a/es/competitors-airtable.html
+++ b/es/competitors-airtable.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>	
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -63,15 +63,15 @@
                 <h3>¿Tienes alguna pregunta sobre Workep?</h3>
                 <form>
                   <div class="competitor-form-fld">
-                    <label>Name</label>
+                    <label>Nombres</label>
                     <input type="text" placeholder="Bill Gates…">
                   </div>
                   <div class="competitor-form-fld">
-                    <label>Email</label>
+                    <label>Correo electrónico</label>
                     <input type="email" placeholder="Bill@microsoft.com">
                   </div>
                   <div class="competitor-form-fld">
-                    <label>Your Question</label>
+                    <label>Tu pregunta</label>
                     <textarea placeholder="Asegúrese de informarnos cómo podemos ayudarlo..."></textarea>
                   </div>
                   <div class="competitor-form-fld last">
@@ -176,7 +176,7 @@
                       <img src="../images/f3-b.png" alt="blank depende" class="blckwhite_im">
                     </figure>
                     <div class="prod_feature_box_text">
-                     <h4>Gantt</h4>
+                     <h4>Diagrama de Gantt</h4>
                     </div>
                   </div>
 
@@ -245,7 +245,7 @@
                 <div class="foundation_sec_slider_box">
                   <img src="../images/gnatt-chart-big.png" alt="gantt chat big">
                   <div class="foundation_sec_slider_title">
-                    <p><span>Use Workep’s automated Gantt chart to view your all your tasks laid out against a timeline, create dependencies, and export it to a spreadsheet to use for reporting. There is no Gantt chart view in Airtable.</span></p>
+                    <p><span>Use el diagrama de Gantt automático de Workep para ver todas sus tareas establecidas en una línea de tiempo, crear dependencias y exportarlas a una hoja de cálculo para usarlas en los informes. No hay  diagramas de Gantt en Airtable. </span></p>
                   </div>
                 </div>
 
@@ -265,7 +265,7 @@
                 <figure>
                   <img src="../images/workep-logonew.png" alt="logo workep">
                 </figure>
-                  <p><strong>Workep</strong> tiene una interfaz de usuario simple y una curva de aprendizaje súper rápida para todo su equipo, junto con la integración de G Suite, potentes funciones en la aplicación y colaboración externa con un solo clic</p>
+                  <p><strong>Workep</strong> tiene una interfaz de usuario simple y una curva de aprendizaje súper rápida para todo su equipo, junto con la integración de G Suite, potentes funciones en la aplicación y colaboración externa con un solo clic.</p>
               </div>
 
               <div class="diff-approach-box">
@@ -309,7 +309,7 @@
       <div class="container">
           <div class="section_title">
             <h2>No se preocupe por sus proyectos en progreso</h2>
-            <p>Realmente nos preocupamos por sus proyectos y compañía</p>
+            <p>Realmente nos preocupamos por sus proyectos y compañía.</p>
           </div>
           
           <div class="project_management_bot project_progress_level project_progress_level_slider">
@@ -441,7 +441,7 @@
                       <li><span>Budget Tracker</span></li>
                       <li><span>Colaboración externa</span></li>
                       <li><span>Workloads</span></li>
-                      <li><span>Gantt Chart Automáticos</span></li>
+                      <li><span>Diagrama de Gantt Automáticos</span></li>
                       
                     </ul>
                   </div>
@@ -470,7 +470,7 @@
                       <td class="featurein-compi"><span class="available"></span></td>
                     </tr>
                     <tr>
-                      <td class="featuretd">Gantt Chart</td>
+                      <td class="featuretd">Diagrama de Gantt</td>
                       <td class="featurein-workep"><span class="available"></span></td>
                       <td class="featurein-compi"><span class="not-available"></span></td>
                     </tr>
@@ -577,21 +577,6 @@
               </div>
             </div>
           </div>
-          <div>
-            <div class="competitors-testimonial-slide">
-              <figure>
-                <img src="../images/test-im1.png" alt="testimonial 1">
-              </figure>
-              <div class="competitors-testimonial-rt">
-                <div class="competitors-testimonial-txt">
-                  <p>It has been a great discovery for our students and teachers to apply this tool in our work environments. Highly recommended for its simplicity, agility, and integration with G Suite.</p>
-                </div>
-                <p class="competitors-testimonial-name"><strong>Javier Prada</strong></p>
-                <p class="competitors-testimonial-place">(EUSA University, Spain)</p>
-              </div>
-            </div>
-          </div>
-
         </div>
         </div>
       </div>
@@ -611,15 +596,15 @@
                 <h3>¿Tienes alguna pregunta sobre Workep?</h3>
                 <form>
                   <div class="competitor-form-fld">
-                    <label>Name</label>
+                    <label>Nombre</label>
                     <input type="text" placeholder="Bill Gates…">
                   </div>
                   <div class="competitor-form-fld">
-                    <label>Email</label>
+                    <label>Correo electrónico</label>
                     <input type="email" placeholder="Bill@microsoft.com">
                   </div>
                   <div class="competitor-form-fld">
-                    <label>Your Question</label>
+                    <label>Tu pregunta</label>
                     <textarea placeholder="Asegúrese de informarnos cómo podemos ayudarlo..."></textarea>
                   </div>
                   <div class="competitor-form-fld last">
@@ -681,7 +666,7 @@
                 <li><a href="https://workep.com/es/time-tracker.html">Time traker</a></li>
                 <li><a href="https://workep.com/es/budget-tracker.html">Budget Traker</a></li>
                 <li><a href="https://workep.com/es/external-collaboration.html">External Collaboration</a></li>
-                <li><a href="https://workep.com/es/gantt-chart.html">Gantt Chart</a></li>
+                <li><a href="https://workep.com/es/gantt-chart.html">Diagrama de Gantt</a></li>
                 <li><a href="https://workep.com/es/gmail-add-on.html">Gmail Ad-on</a></li>
             </ul>
           </div>
