--- a/es/competitors-asana.html
+++ b/es/competitors-asana.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>	
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -111,7 +111,7 @@
                       <img src="../images/f5-b.png" alt="Google Drive Blank" class="blckwhite_im">
                     </figure>
                     <div class="prod_feature_box_text">
-                     <h4>Google Drive <br>Nativo</h4>
+                     <h4>Google Drive <br>nativo</h4>
                     </div>
                   </div>
 
@@ -121,7 +121,7 @@
                       <img src="../images/f6-b.png" alt="App blank" class="blckwhite_im">
                     </figure>
                     <div class="prod_feature_box_text">
-                     <h4>Google Calendar<br>Nativo</h4>
+                     <h4>Google Calendar<br>nativo</h4>
                     </div>
                   </div>
 
@@ -268,7 +268,7 @@
                 <figure>
                   <img src="../images/workep-logonew2.png" alt="workep logo">
                 </figure>
-                <p><strong>Workep</strong> le permite visualizar y personalizar proyectos, junto con la integración de G Suite, potentes funciones integradas en la aplicación y colaboración externa con un solo clic</p>
+                <p><strong>Workep</strong> le permite visualizar y personalizar proyectos, junto con la integración de G Suite, potentes funciones integradas en la aplicación y colaboración externa con un solo clic.</p>
               </div>
 
               <div class="diff-approach-box">
@@ -287,7 +287,7 @@
               </div>
             
             <div class="diff-approach-secB-des">
-              <p><strong>Workep</strong> le permite visualizar y personalizar proyectos, junto con la integración de G Suite, potentes funciones integradas en la aplicación y colaboración externa con un solo clic</p>
+              <p><strong>Workep</strong> le permite visualizar y personalizar proyectos, junto con la integración de G Suite, potentes funciones integradas en la aplicación y colaboración externa con un solo clic.</p>
             </div>
           </div>
       </div>
@@ -450,7 +450,7 @@
                       <li><span>Budget Tracker</span></li>
                       <li><span>Colaboración externa</span></li>
                       <li><span>Workloads</span></li>
-                      <li><span>Gantt Chart Automática</span></li>
+                      <li><span>Diagrama de Gantt Automático</span></li>
                       
                     </ul>
                   </div>
@@ -479,7 +479,7 @@
                       <td class="featurein-compi"><span class="available"></span></td>
                     </tr>
                     <tr>
-                      <td class="featuretd">Gantt Chart</td>
+                      <td class="featuretd">Diagrama de Gantt</td>
                       <td class="featurein-workep"><span class="available"></span></td>
                       <td class="featurein-compi"><span class="not-available"></span></td>
                     </tr>
@@ -597,7 +597,7 @@
                 <h3>¿Tienes alguna pregunta sobre Workep?</h3>
                 <form>
                   <div class="competitor-form-fld">
-                    <label>Nombres</label>
+                    <label>Nombre</label>
                     <input type="text" placeholder="Bill Gates…">
                   </div>
                   <div class="competitor-form-fld">
@@ -667,7 +667,7 @@
                 <li><a href="https://workep.com/es/time-tracker.html">Time traker</a></li>
                 <li><a href="https://workep.com/es/budget-tracker.html">Budget Traker</a></li>
                 <li><a href="https://workep.com/es/external-collaboration.html">External Collaboration</a></li>
-                <li><a href="https://workep.com/es/gantt-chart.html">Gantt Chart</a></li>
+                <li><a href="https://workep.com/es/gantt-chart.html">Diagrama de Gantt</a></li>
                 <li><a href="https://workep.com/es/gmail-add-on.html">Gmail Ad-on</a></li>
             </ul>
           </div>
