--- a/es/competitors-basecamp.html
+++ b/es/competitors-basecamp.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>	
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -69,7 +69,7 @@
                     <textarea placeholder="Asegúrese de informarnos cómo podemos ayudarlo..."></textarea>
                   </div>
                   <div class="competitor-form-fld last">
-                    <input type="submit" value="Contact us now">
+                    <input type="submit" value="Habla con nosotros">
                   </div>
                 </form>
               </div>
@@ -169,7 +169,7 @@
                       <img src="../images/f3-b.png" alt="Workep blank funtionality #4" class="blckwhite_im">
                     </figure>
                     <div class="prod_feature_box_text">
-                     <h4>Gantt</h4>
+                     <h4>Diagrama de Gantt</h4>
                     </div>
                   </div>
 
@@ -231,7 +231,7 @@
                 <div class="foundation_sec_slider_box">
                   <img src="../images/budget-tracker.png" alt="budget traker workep">
                   <div class="foundation_sec_slider_title">
-                    <p><span>Assign an hourly value to your team members to sum up the budget spent working on each task in Workep. Basecamp doesn’t have an in-app budget tracker, so you have to use additional tools.</span></p>
+                    <p><span>Asigne un valor por hora a los miembros de su equipo para resumir el presupuesto gastado trabajando en cada tarea en Workep. Basecamp no tiene un rastreador de presupuesto en la aplicación, por lo que debe usar herramientas adicionales.</span></p>
                   </div>
                 </div>
 
@@ -277,7 +277,7 @@
               </div>
 
             <div class="diff-approach-secB-des">
-              <p><strong>Workep</strong> le permite visualizar y personalizar proyectos, junto con la integración de G Suite, potentes funciones integradas en la aplicación y colaboración externa con un solo clic</p>
+              <p><strong>Workep</strong> le permite visualizar y personalizar proyectos, junto con la integración de G Suite, potentes funciones integradas en la aplicación y colaboración externa con un solo clic.</p>
             </div>
           </div>
       </div>
@@ -414,7 +414,7 @@
           <div class="user-suite-feelin">
               <div class="user-suite-feel-table1">
                 <div class="user-suite-feel-table1-Lft">
-                  <p>Workep se sincroniza automáticamente con cada<strong>App de G Suite como:</strong></p>
+                  <p>Workep se sincroniza automáticamente con cada<strong> App de G Suite como:</strong></p>
                   <div class="user-suite-feel-table1-list">
                     <ul>
                       <li class="gc"><span>Google Calendar</span></li>
@@ -428,14 +428,14 @@
                   </div>
                 </div>
                 <div class="user-suite-feel-table1-rt">
-                  <p>Workep también tiene un montón de poderosas <strong>App</strong> características, como:</p>
+                  <p>Workep también tiene un montón de poderosas <strong>Apps</strong> características, como:</p>
                   <div class="user-suite-feel-table1-list">
                     <ul>
                       <li><span>Time Tracker</span></li>
                       <li><span>Budget Tracker</span></li>
                       <li><span>Colaboración Externa</span></li>
                       <li><span>Workloads</span></li>
-                      <li><span>Gantt Chart Automatico</span></li>
+                      <li><span>Diagrama de Gantt Automático</span></li>
                       
                     </ul>
                   </div>
@@ -464,7 +464,7 @@
                       <td class="featurein-compi"><span class="not-available"></span></td>
                     </tr>
                     <tr>
-                      <td class="featuretd">Gantt Chart</td>
+                      <td class="featuretd">Diagrama de Gantt</td>
                       <td class="featurein-workep"><span class="available"></span></td>
                       <td class="featurein-compi"><span class="not-available"></span></td>
                     </tr>
@@ -665,7 +665,7 @@
                 <li><a href="https://workep.com/es/time-tracker.html">Time traker</a></li>
                 <li><a href="https://workep.com/es/budget-tracker.html">Budget Traker</a></li>
                 <li><a href="https://workep.com/es/external-collaboration.html">External Collaboration</a></li>
-                <li><a href="https://workep.com/es/gantt-chart.html">Gantt Chart</a></li>
+                <li><a href="https://workep.com/es/gantt-chart.html">Diagrama de Gantt</a></li>
                 <li><a href="https://workep.com/es/gmail-add-on.html">Gmail Ad-on</a></li>
             </ul>
           </div>
