--- a/es/competitors-jira.html
+++ b/es/competitors-jira.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>	
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -58,7 +58,7 @@
                 <h3>¿Tienes alguna pregunta sobre Workep?</h3>
                 <form>
                   <div class="competitor-form-fld">
-                    <label>Nombres</label>
+                    <label>Nombre</label>
                     <input type="text" placeholder="Bill Gates…">
                   </div>
                   <div class="competitor-form-fld">
@@ -103,7 +103,7 @@
                       <img src="../images/f5-b.png" alt="Funtionality blank #2" class="blckwhite_im">
                     </figure>
                     <div class="prod_feature_box_text">
-                     <h4>Google Drive<br> Nativo</h4>
+                     <h4>Google Drive<br> nativo</h4>
                     </div>
                   </div>
 
@@ -113,7 +113,7 @@
                       <img src="../images/f6-b.png" alt="Funtionality blank #3" class="blckwhite_im">
                     </figure>
                     <div class="prod_feature_box_text">
-                     <h4>Google Calendar<br> Nativo</h4>
+                     <h4>Google Calendar<br> nativo</h4>
                     </div>
                   </div>
 
@@ -171,7 +171,7 @@
                       <img src="../images/f3-b.png" alt="Funtionality blank #7" class="blckwhite_im">
                     </figure>
                     <div class="prod_feature_box_text">
-                     <h4>Gantt</h4>
+                     <h4>Diagrama de Gantt</h4>
                     </div>
                   </div>
 
@@ -280,7 +280,7 @@
             
 
             <div class="diff-approach-secB-des">
-              <p><strong>Workep</strong> le permite visualizar y personalizar proyectos, junto con la integración de G Suite, potentes funciones integradas en la aplicación y colaboración externa con un solo clic</p>
+              <p><strong>Workep</strong> le permite visualizar y personalizar proyectos, junto con la integración de G Suite, potentes funciones integradas en la aplicación y colaboración externa con un solo clic.</p>
             </div>
           </div>
       </div>
@@ -289,7 +289,7 @@
       <div class="container">
           <div class="section_title">
             <h2>El poder de nuestra colaboración externa.</h2>
-            <p>Este es nuestro Gantt en el modo compartido, puede ver nuestra hoja de ruta aquí;)</p>
+            <p>Este es nuestro Gantt en el modo compartido, puede ver nuestra hoja de ruta aquí ;)</p>
           </div>
 
           <div class="external-collab-bot">
@@ -437,7 +437,7 @@
                       <li><span>Budget Tracker</span></li>
                       <li><span>Colaboración externa</span></li>
                       <li><span>Workloads</span></li>
-                      <li><span>Gantt Chart automatico</span></li>
+                      <li><span>Diagrama de Gantt automático</span></li>
                     </ul>
                   </div>
                 </div>
@@ -448,7 +448,7 @@
                 <table>
                   <thead>
                     <tr>
-                      <th class="featuretd">Feature</th>
+                      <th class="featuretd">Características</th>
                       <th class="featurein-workep">Workep</th>
                       <th class="featurein-compi">Jira</th>
                     </tr>
@@ -465,7 +465,7 @@
                       <td class="featurein-compi"><span class="available"></span></td>
                     </tr>
                     <tr>
-                      <td class="featuretd">Gantt Chart</td>
+                      <td class="featuretd">Diagrama de Gantt</td>
                       <td class="featurein-workep"><span class="available"></span></td>
                       <td class="featurein-compi"><span class="not-available"></span></td>
                     </tr>
@@ -501,12 +501,12 @@
                       <td class="featurein-compi"><span class="not-available"></span></td>
                     </tr>
                     <tr>
-                      <td class="featuretd">Google Calendar Nativo</td>
+                      <td class="featuretd">Google Calendar nativo</td>
                       <td class="featurein-workep"><span class="available"></span></td>
                       <td class="featurein-compi"><span class="not-available"></span></td>
                     </tr>
                     <tr>
-                      <td class="featuretd">Google Drive Nativo</td>
+                      <td class="featuretd">Google Drive nativo</td>
                       <td class="featurein-workep"><span class="available"></span></td>
                       <td class="featurein-compi"><span class="not-available"></span></td>
                     </tr>
@@ -550,7 +550,7 @@
           <div>
             <div class="competitors-testimonial-slide">
               <figure>
-                <img src="../images/peoplefaces/javier.jpeg" alt="customer #1">
+                <img src="../images/test-im1.png" alt="customer #2">
               </figure>
               <div class="competitors-testimonial-rt">
                 <div class="competitors-testimonial-txt">
@@ -564,7 +564,7 @@
           <div>
             <div class="competitors-testimonial-slide">
               <figure>
-                <img src="../images/test-im1.png" alt="customer #2">
+                <img src="../images/peoplefaces/javier.jpeg" alt="customer #1">
               </figure>
               <div class="competitors-testimonial-rt">
                 <div class="competitors-testimonial-txt">
