--- a/es/competitors-monday.html
+++ b/es/competitors-monday.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>	
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -67,7 +67,7 @@
                     <input type="email" placeholder="Bill@microsoft.com">
                   </div>
                   <div class="competitor-form-fld">
-                    <label>Su pregunta</label>
+                    <label>Tu pregunta</label>
                     <textarea placeholder="Asegúrese de informarnos cómo podemos ayudarlo..."></textarea>
                   </div>
                   <div class="competitor-form-fld last">
@@ -172,7 +172,7 @@
                       <img src="../images/f3-b.png" alt="Workep funtionality blank #7" class="blckwhite_im">
                     </figure>
                     <div class="prod_feature_box_text">
-                     <h4>Gantt</h4>
+                     <h4>Diagrama de Gantt</h4>
                     </div>
                   </div>
 
@@ -183,21 +183,21 @@
                 <div class="foundation_sec_slider_box">
                   <img src="../images/time-tracker.png" alt="Workep time traker">
                   <div class="foundation_sec_slider_title">
-                    <p><span>Haga clic en el icono del rastreador de tiempo en una tarea o abra el panel del rastreador de tiempo para comenzar a rastrear el tiempo en Workep. El lunes, debe descargar una extensión de Chrome y pasar por el proceso de configuración.</span></p>
+                    <p><span>Haga clic en el icono del rastreador de tiempo en una tarea o abra el panel del rastreador de tiempo para comenzar a rastrear el tiempo en Workep. Monday, debe descargar una extensión de Chrome y pasar por el proceso de configuración.</span></p>
                   </div>
                 </div>
 
                 <div class="foundation_sec_slider_box">
                   <img src="../images/native-google-drive.png" alt="Workep Native integration google Drive">
                   <div class="foundation_sec_slider_title">
-                    <p><span>No es necesario que realice ningún paso adicional para sincronizar Workep con su Google Drive: es completamente automático. El lunes, debe activar manualmente la integración con Drive.</span></p>
+                    <p><span>No es necesario que realice ningún paso adicional para sincronizar Workep con su Google Drive: es completamente automático. Monday, debe activar manualmente la integración con Drive.</span></p>
                   </div>
                 </div>
 
                 <div class="foundation_sec_slider_box">
                   <img src="../images/native-calender.png" alt="Workep calenar Google">
                   <div class="foundation_sec_slider_title">
-                    <p><span>Google Calendar es su calendario nativo en Workep, por lo que los calendarios de su proyecto se sincronizan y actualizan automáticamente. En el lunes, debe sincronizar manualmente proyectos y tareas de una manera al Calendario.</span></p>
+                    <p><span>Google Calendar es su calendario nativo en Workep, por lo que los calendarios de su proyecto se sincronizan y actualizan automáticamente. En Monday, debe sincronizar manualmente proyectos y tareas de una manera al Calendario.</span></p>
                   </div>
                 </div>
 
@@ -225,21 +225,21 @@
                 <div class="foundation_sec_slider_box">
                   <img src="../images/external-collab.png" alt="External collaboration Workep">
                   <div class="foundation_sec_slider_title">
-                    <p><span>Comparta sus proyectos de Workep con cualquier persona fuera de su organización, ¡sin necesidad de registrarse ni pasos adicionales! Cualquier persona con la que desee compartir sus proyectos de lunes tiene que registrarse y crear una cuenta.</span></p>
+                    <p><span>Comparta sus proyectos de Workep con cualquier persona fuera de su organización, ¡sin necesidad de registrarse ni pasos adicionales! Cualquier persona con la que desee compartir sus proyectos de Monday tiene que registrarse y crear una cuenta.</span></p>
                   </div>
                 </div>
 
                 <div class="foundation_sec_slider_box">
                   <img src="../images/budget-tracker.png" alt="Budget traker Workep">
                   <div class="foundation_sec_slider_title">
-                    <p><span>Asigne un valor por hora a los miembros de su equipo para resumir el presupuesto gastado trabajando en cada tarea en Workep. El lunes no tiene un rastreador de presupuesto en la aplicación, por lo que debe usar herramientas adicionales.</span></p>
+                    <p><span>Asigne un valor por hora a los miembros de su equipo para resumir el presupuesto gastado trabajando en cada tarea en Workep. Monday no tiene un rastreador de presupuesto en la aplicación, por lo que debe usar herramientas adicionales.</span></p>
                   </div>
                 </div>
 
                 <div class="foundation_sec_slider_box">
                   <img src="../images/gnatt-chart-big.png" alt="Gantt Chart Workep">
                   <div class="foundation_sec_slider_title">
-                    <p><span>Use el diagrama de Gantt automatizado de Workep para ver todas sus tareas establecidas en una línea de tiempo, crear dependencias y exportarlas a una hoja de cálculo para usarlas en los informes. No hay vista de diagrama de Gantt el lunes.</span></p>
+                    <p><span>Use el diagrama de Gantt automatizado de Workep para ver todas sus tareas establecidas en una línea de tiempo, crear dependencias y exportarlas a una hoja de cálculo para usarlas en los informes. No hay vista de diagrama de Gantt en Monday.</span></p>
                   </div>
                 </div>
 
@@ -259,7 +259,7 @@
                 <figure>
                   <img src="../images/workep-logonew.png" alt="Workep logo">
                 </figure>
-                <p><strong>Workep</strong> le permite visualizar y personalizar proyectos, junto con la integración de G Suite, potentes funciones integradas en la aplicación y colaboración externa con un solo clic</p>
+                <p><strong>Workep</strong> le permite visualizar y personalizar proyectos, junto con la integración de G Suite, potentes funciones integradas en la aplicación y colaboración externa con un solo clic.</p>
               </div>
 
               <div class="diff-approach-box">
@@ -279,7 +279,7 @@
             </div>
 
             <div class="diff-approach-secB-des">
-              <p><strong>Workep</strong> le permite visualizar y personalizar proyectos, junto con la integración de G Suite, potentes funciones integradas en la aplicación y colaboración externa con un solo clic</p>
+              <p><strong>Workep</strong> le permite visualizar y personalizar proyectos, junto con la integración de G Suite, potentes funciones integradas en la aplicación y colaboración externa con un solo clic.</p>
             </div>
           </div>
       </div>
@@ -287,8 +287,8 @@
    <div class="external-collab common_gap">
       <div class="container">
           <div class="section_title">
-            <h2>The power of our external collaboration </h2>
-            <p>This is our Gantt in the shared mode, you can see our roadmap here ;)</p>
+            <h2>El poder de nuestra colaboración externa.</h2>
+            <p>Este es nuestro Gantt en el modo compartido, puedes ver nuestra hoja de ruta aquí ;)</p>
           </div>
 
           <div class="external-collab-bot">
@@ -423,7 +423,7 @@
                       <li class="gd"><span>Google Docs</span></li>
                       <li class="gml"><span>Gmail</span></li>
                       <li class="gchat"><span>Google Chat</span></li>
-                      <li class="gcontact"><span>Google Contacts</span></li>
+                      <li class="gcontact"><span>Contactos de Google</span></li>
                     
                     </ul>
                   </div>
@@ -434,9 +434,9 @@
                     <ul>
                       <li><span>Time Tracker</span></li>
                       <li><span>Budget Tracker</span></li>
-                      <li><span>External Collaboration</span></li>
+                      <li><span>Colaboración Externa</span></li>
                       <li><span>Workloads</span></li>
-                      <li><span>Automatic Gantt Chart</span></li>
+                      <li><span>Diagrama de Gantt automático</span></li>
                       
                     </ul>
                   </div>
@@ -500,12 +500,12 @@
                       <td class="featurein-compi"><span class="available"></span></td>
                     </tr>
                     <tr>
-                      <td class="featuretd">Google Calendar Nativo</td>
+                      <td class="featuretd">Google Calendar nativo</td>
                       <td class="featurein-workep"><span class="available"></span></td>
                       <td class="featurein-compi"><span class="not-available"></span></td>
                     </tr>
                     <tr>
-                      <td class="featuretd">Google Drive Nativo</td>
+                      <td class="featuretd">Google Drive nativo</td>
                       <td class="featurein-workep"><span class="available"></span></td>
                       <td class="featurein-compi"><span class="not-available"></span></td>
                     </tr>
@@ -530,7 +530,7 @@
                       <td class="featurein-compi">Amazon / Google</td>
                     </tr>
                     <tr>
-                      <td class="featuretd">Starting Price (Premium)</td>
+                      <td class="featuretd">Precio inicial (Premium)</td>
                       <td class="featurein-workep"><strong>$9.99/mes</strong>
                         <span class="offertag">75% menos!</span>
                       </td>
@@ -608,7 +608,7 @@
                     <textarea placeholder="Asegúrese de informarnos cómo podemos ayudarlo..."></textarea>
                   </div>
                   <div class="competitor-form-fld last">
-                    <input type="submit" value="Contact us now">
+                    <input type="submit" value="Habla con nosotros">
                   </div>
                 </form>
               </div>
