--- a/es/competitors-notion.html
+++ b/es/competitors-notion.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>	
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -72,7 +72,7 @@
                     <textarea placeholder="Asegúrese de informarnos cómo podemos ayudarlo..."></textarea>
                   </div>
                   <div class="competitor-form-fld last">
-                    <input type="submit" value="Contact us now">
+                    <input type="submit" value="Habla con nosotros">
                   </div>
                 </form>
               </div>
@@ -105,7 +105,7 @@
                       <img src="../images/f5-b.png" alt="Workep Funtionality Blank #2" class="blckwhite_im">
                     </figure>
                     <div class="prod_feature_box_text">
-                     <h4>Google Drive<br> Nativo</h4>
+                     <h4>Google Drive<br> nativo</h4>
                     </div>
                   </div>
 
@@ -115,7 +115,7 @@
                       <img src="../images/f6-b.png" alt="Workep Funtionality Blank #3" class="blckwhite_im">
                     </figure>
                     <div class="prod_feature_box_text">
-                     <h4>Google Calendar<br> Nativo</h4>
+                     <h4>Google Calendar<br> nativo</h4>
                     </div>
                   </div>
 
@@ -173,7 +173,7 @@
                       <img src="../images/f3-b.png" alt="Workep Funtionality Blank #7" class="blckwhite_im">
                     </figure>
                     <div class="prod_feature_box_text">
-                     <h4>Gantt</h4>
+                     <h4>Diagrama de Gantt</h4>
                     </div>
                   </div>
 
@@ -436,7 +436,8 @@
                   </div>
                 </div>
                 <div class="user-suite-feel-table1-rt">
-                  <p>Workep también tiene muchas funciones potentes, como:</p>
+                  <p>Workep también tiene un montón de poderosas características, como:</p>
+                    <br>
                   <div class="user-suite-feel-table1-list">
                     <ul>
                       <li><span>Time Tracker</span></li>
@@ -472,7 +473,7 @@
                       <td class="featurein-compi"><span class="available"></span></td>
                     </tr>
                     <tr>
-                      <td class="featuretd">Gantt Chart</td>
+                      <td class="featuretd">Diagrama de Gantt</td>
                       <td class="featurein-workep"><span class="available"></span></td>
                       <td class="featurein-compi"><span class="not-available"></span></td>
                     </tr>
@@ -508,12 +509,12 @@
                       <td class="featurein-compi"><span class="not-available"></span></td>
                     </tr>
                     <tr>
-                      <td class="featuretd">Google Calendar Nativo</td>
+                      <td class="featuretd">Google Calendar nativo</td>
                       <td class="featurein-workep"><span class="available"></span></td>
                       <td class="featurein-compi"><span class="not-available"></span></td>
                     </tr>
                     <tr>
-                      <td class="featuretd">Google Drive Nativo</td>
+                      <td class="featuretd">Google Drive nativo</td>
                       <td class="featurein-workep"><span class="available"></span></td>
                       <td class="featurein-compi"><span class="not-available"></span></td>
                     </tr>
@@ -538,15 +539,12 @@
                       <td class="featurein-compi">Data Centers</td>
                     </tr>
                     <tr>
-                      <td class="featuretd">Starting Price (Premium)</td>
+                      <td class="featuretd">Precio de inicio(Premium)</td>
                       <td class="featurein-workep"><strong>$9.99/mes</strong>
                         <!-- <span class="offertag">60% less!</span> -->
                       </td>
                       <td class="featurein-compi">$14/mes</td>
                     </tr>
-
-
-
                   </tbody>
                 </table>
               </div>
