--- a/es/competitors-trello.html
+++ b/es/competitors-trello.html
@@ -63,11 +63,11 @@
                     <input type="email" placeholder="Bill@microsoft.com">
                   </div>
                   <div class="competitor-form-fld">
-                    <label>tu pregunta</label>
+                    <label>Tu pregunta</label>
                     <textarea placeholder="Asegúrese de informarnos cómo podemos ayudarlo…"></textarea>
                   </div>
                   <div class="competitor-form-fld last">
-                    <input type="submit" value="Contact us now">
+                    <input type="submit" value="Habla con nosotros">
                   </div>
                 </form>
               </div>
@@ -100,7 +100,7 @@
                       <img src="../images/f5-b.png" alt="Funtionality Workep blank #1" class="blckwhite_im">
                     </figure>
                     <div class="prod_feature_box_text">
-                     <h4>Google Drive<br> Nativo</h4>
+                     <h4>Google Drive<br> nativo</h4>
                     </div>
                   </div>
 
@@ -110,7 +110,7 @@
                       <img src="../images/f6-b.png" alt="Funtionality Workep blank #2" class="blckwhite_im">
                     </figure>
                     <div class="prod_feature_box_text">
-                     <h4>Google Calendar<br> Nativo</h4>
+                     <h4>Google Calendar<br> nativo</h4>
                     </div>
                   </div>
 
@@ -168,7 +168,7 @@
                       <img src="../images/f3-b.png" alt="Funtionality Workep blank #6" class="blckwhite_im">
                     </figure>
                     <div class="prod_feature_box_text">
-                     <h4>Gantt</h4>
+                     <h4>Diagrama de Gantt</h4>
                     </div>
                   </div>
 
@@ -286,7 +286,7 @@
       <div class="container">
           <div class="section_title">
             <h2>The power of our external collaboration </h2>
-            <p>This is our Gantt in the shared mode, you can see our roadmap here ;)</p>
+            <p>Este es nuestro Gantt en el modo compartido, puede ver nuestra hoja de ruta aquí ;)</p>
           </div>
 
           <div class="external-collab-bot">
@@ -607,7 +607,7 @@
                     <input type="email" placeholder="Bill@microsoft.com">
                   </div>
                   <div class="competitor-form-fld">
-                    <label>Su pregunta</label>
+                    <label>Tu pregunta</label>
                     <textarea placeholder="Asegúrese de informarnos cómo podemos ayudarlo…"></textarea>
                   </div>
                   <div class="competitor-form-fld last">
