--- a/es/competitors-wrike.html
+++ b/es/competitors-wrike.html
@@ -65,7 +65,7 @@
                     <input type="email" placeholder="Bill@microsoft.com">
                   </div>
                   <div class="competitor-form-fld">
-                    <label>Su pregunta</label>
+                    <label>Tu pregunta</label>
                     <textarea placeholder="Asegúrese de informarnos cómo podemos ayudarlo..."></textarea>
                   </div>
                   <div class="competitor-form-fld last">
@@ -102,7 +102,7 @@
                       <img src="../images/f5-b.png" alt="Workep Funtionality blank #2" class="blckwhite_im">
                     </figure>
                     <div class="prod_feature_box_text">
-                     <h4>Google Drive <br>Nativo</h4>
+                     <h4>Google Drive <br>nativo</h4>
                     </div>
                   </div>
 
@@ -112,7 +112,7 @@
                       <img src="../images/f6-b.png" alt="Workep Funtionality blank #3" class="blckwhite_im">
                     </figure>
                     <div class="prod_feature_box_text">
-                     <h4>Google Calendar<br> Nativo</h4>
+                     <h4>Google Calendar<br> nativo</h4>
                     </div>
                   </div>
 
@@ -170,7 +170,7 @@
                       <img src="../images/f3-b.png" alt="Workep Funtionality blank #7" class="blckwhite_im">
                     </figure>
                     <div class="prod_feature_box_text">
-                     <h4>Gantt</h4>
+                     <h4>Diagrama de Gantt</h4>
                     </div>
                   </div>
                 </div>
@@ -284,8 +284,8 @@
    <div class="external-collab common_gap">
       <div class="container">
           <div class="section_title">
-            <h2>The power of our external collaboration </h2>
-            <p>This is our Gantt in the shared mode, you can see our roadmap here ;)</p>
+            <h2>El poder de nuestra colaboración externa.</h2>
+            <p>Este es nuestro Gantt en el modo compartido, puedes ver nuestra hoja de ruta aquí ;)</p>
           </div>
 
           <div class="external-collab-bot">
@@ -417,12 +417,12 @@
                   <p>Workep se sincroniza automáticamente con cada aplicación de <strong> G Suite</strong>: </p>
                   <div class="user-suite-feel-table1-list">
                     <ul>
-                      <li class="gc"><span>Google Calendar</span></li>
+                      <li class="gc"><span>Calendario de Google</span></li>
                       <li class="dtd"><span>Drive & Team Drive</span></li>
                       <li class="gd"><span>Google Docs</span></li>
                       <li class="gml"><span>Gmail</span></li>
                       <li class="gchat"><span>Google Chat</span></li>
-                      <li class="gcontact"><span>Google Contacts</span></li>
+                      <li class="gcontact"><span>Contactos de Google</span></li>
                     
                     </ul>
                   </div>
@@ -531,7 +531,7 @@
                       <td class="featurein-compi">Data Centers</td>
                     </tr>
                     <tr>
-                      <td class="featuretd">Starting Price (Premium)</td>
+                      <td class="featuretd">Precio de incio (Premium)</td>
                       <td class="featurein-workep"><strong>$9.99/mes</strong>
                         <span class="offertag">60% menos!</span>
                       </td>
