--- a/es/marketing.html
+++ b/es/marketing.html
@@ -42,9 +42,9 @@
           </div>
         </div>
         <div class="col-md-7 partner_banner_rt">
-          <h2>Workep for marketing<br> and Creative Agencies </h2>
+          <h2>Workep para marketing<br> e industrias creativa</h2>
           <h3>Planifique y colabore mejor en todas sus actividades estratégicas.</h3>
-          <p>For marketing and creative agencies that use G Suite to collaborate, Workep is the missing piece that brings it all together.</p>
+          <p>Para las agencias de marketing y creativas que usan G Suite para colaborar, Workep es la pieza que falta que lo une todo.  </p>
          <a href="#url" class="starttrial_btn starttrial_btn_lft_arrow">Comience su prueba gratuita de 15 días</a>
         </div>
       </div>
@@ -110,7 +110,7 @@
 
             </ul>
           </div>
-          <div class="syncs_auto_content">
+         <!-- <div class="syncs_auto_content">
             
               <div class="syncs_auto_content_in">
                 <div class="row">
@@ -197,7 +197,7 @@
                 </div>
               </div>
            
-          </div>
+          </div>-->
         </div>
     </div>
   </div>
