--- a/es/on-the-go.html
+++ b/es/on-the-go.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Notas de voz En tiempo real de Workep</title>
+    <title>Notas de voz sobre la marcha de Workep</title>
     <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
     <!-- Bootstrap CSS -->
